# ml-housting-project

./: .coverage  .dockerignore  .env.example  .gitignore  README.md  USER_MANUAL.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.githooks/: pre-push
.github/workflows/: ci.yml  deploy-production.yml
Docs/: refactoring_cicd.md
artifacts/: metrics.json
backend/: Dockerfile  app.py  requirements.txt
backend/services/: ab_router.py  experiment_logger.py  model_registry.py
backend/storage/: hf_client.py  s3_client.py
frontend/: Dockerfile  package.json  streamlit_app.py
notebooks/: 02_train_ab_models.ipynb  03_ab_analysis.ipynb
scripts/: check_project_structure.py  generate_ab_traffic.py  generate_deploy_doc.py  generate_mlflow_guide.py  install_git_hook.ps1  test_ab_router_manual.py  upload_model_to_hf.py  upload_model_to_minio.py  workflow_local.ps1
src/common/: features.py
src/ml_housing/: __init__.py  data.py  evaluate.py  features.py  pipeline.py  preprocessing.py  train.py
src/ml_project.egg-info/: PKG-INFO  SOURCES.txt
src/prediction/: config.py  model_loader.py  predict.py  schemas.py
src/training/: evaluate.py  pipeline.py  preprocessing.py  train.py
tests/: ai_commit.py  conftest.py  test_ab_router.py  test_api_integration.py  test_backend.py  test_common_features.py  test_data.py  test_features.py  test_frontend.py  test_hf_client.py  test_model_loader.py  test_pipeline.py  test_prediction_logic.py  test_prediction_schemas.py  test_preprocessing.py  test_project_structure.py  test_s3_client.py
