[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_housing"
version = "0.1.0"
description = "Pipeline de prédiction de prix immobiliers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ipykernel",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "S"]
ignore = ["N803", "N806"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.bandit]
targets = ["src"]
# Exclure le répertoire de l'environnement virtuel et les fichiers de test
exclude_dirs = ["mon_env", "tests", ".venv", "venv"]
# B101 est ignoré dans les fichiers de test, mais si vous aviez du code de production
# où vous vouliez l'ignorer, vous pourriez l'ajouter ici.